[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/characters/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/screens/stairwell/Stairwell.gd" type="Script" id=2]
[ext_resource path="res://sprites/screens/stairwell/StairTile.png" type="Texture" id=3]
[ext_resource path="res://sprites/screens/stairwell/StairwellTiles.png" type="Texture" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 14, 0, 14, 14, 0, 14 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 14, 0, 14, 14, 0, 14 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 14, 0, 0, 14, 14 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 14, 0, 14, 14 )

[sub_resource type="TileSet" id=5]
0/name = "StairTile.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 42, 28 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "StairwellTiles.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 14, 0, 14, 14 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "StairwellTiles.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 28, 0, 14, 14 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 1 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "StairwellTiles.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 14, 14 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 2 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "StairwellTiles.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 42, 0, 14, 14 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 3 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "StairwellTiles.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 56, 0, 14, 14 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 4 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 14, 42 )
b = Vector2( 56, 14 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( 12, 43 )
b = Vector2( 461, 492 )

[node name="Stairwell" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 14, 14 )
cell_custom_transform = Transform2D( 14, 0, 0, 14, 0, 0 )
format = 1
tile_data = PoolIntArray( 131074, 0, 0, 196611, 0, 0, 262148, 0, 0, 327685, 0, 0, 393222, 0, 0, 458759, 0, 0, 524296, 0, 0, 589833, 0, 0, 655370, 0, 0, 720907, 0, 0, 786444, 0, 0, 851981, 0, 0, 917518, 0, 0, 983055, 0, 0, 1048592, 0, 0, 1114129, 0, 0, 1179666, 0, 0, 1245203, 0, 0, 1310740, 0, 0, 1376277, 0, 0, 1441814, 0, 0, 1507351, 0, 0, 1572888, 0, 0, 1638425, 0, 0, 1703962, 0, 0, 1769499, 0, 0, 1835036, 0, 0, 1900573, 0, 0, 1966110, 0, 0, 2031647, 0, 0, 2097184, 0, 0, 2162721, 0, 0 )

[node name="Lines" type="StaticBody2D" parent="."]

[node name="Line1" type="CollisionShape2D" parent="Lines"]
shape = SubResource( 6 )

[node name="Line2" type="CollisionShape2D" parent="Lines"]
shape = SubResource( 7 )

[node name="Line3" type="CollisionShape2D" parent="Lines"]
position = Vector2( 45, -31 )
shape = SubResource( 7 )

[node name="YSort" type="YSort" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 45, 31 )

[node name="Camera2D" type="Camera2D" parent="YSort/Player"]
current = true
limit_left = 0
limit_top = 0

[node name="StairsNotifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 252.5, 245.25 )
scale = Vector2( 25.15, 24.475 )

[node name="DarknessTimer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_exited" from="StairsNotifier" to="." method="_on_StairsNotifier_screen_exited"]
[connection signal="timeout" from="DarknessTimer" to="." method="_on_DarknessTimer_timeout"]
